AM_CPPFLAGS=-I$(top_srcdir)/../include -I$(top_srcdir)/../src -I$(top_srcdir)/../src/phreeqcpp -I$(top_srcdir)/../src/phreeqcpp/phreeqc -I$(top_srcdir) -I/z/parkplace/home/charlton/include

bin_PROGRAMS = unit

unit_SOURCES=\
	TestCVar.cpp\
	TestCVar.h\
	TestIPhreeqc.cpp\
	TestIPhreeqc.h\
	TestIPhreeqcLib.cpp\
	TestIPhreeqcLib.h\
	TestSelectedOutput.cpp\
	TestSelectedOutput.h\
	TestVar.cpp\
	TestVar.h\
	unit.cpp\
	../src/CVar.hxx\
	../src/Debug.h\
	../src/ErrorReporter.hxx\
	../src/IPhreeqcCallbacks.h\
	../src/IPhreeqc.cpp\
	../src/IPhreeqc.h\
	../src/IPhreeqc.hpp\
	../src/IPhreeqcLib.cpp\
	../src/CSelectedOutput.cpp\
	../src/CSelectedOutput.hxx\
	../src/Var.c\
	../src/phreeqcpp/cxxKinetics.cxx\
	../src/phreeqcpp/cxxKinetics.h\
	../src/phreeqcpp/cxxMix.cxx\
	../src/phreeqcpp/cxxMix.h\
	../src/phreeqcpp/dumper.cpp\
	../src/phreeqcpp/dumper.h\
	../src/phreeqcpp/Exchange.cxx\
	../src/phreeqcpp/Exchange.h\
	../src/phreeqcpp/ExchComp.cxx\
	../src/phreeqcpp/ExchComp.h\
	../src/phreeqcpp/GasComp.cxx\
	../src/phreeqcpp/GasComp.h\
	../src/phreeqcpp/GasPhase.cxx\
	../src/phreeqcpp/GasPhase.h\
	../src/phreeqcpp/ISolution.cxx\
	../src/phreeqcpp/ISolution.h\
	../src/phreeqcpp/ISolutionComp.cxx\
	../src/phreeqcpp/ISolutionComp.h\
	../src/phreeqcpp/Keywords.cpp\
	../src/phreeqcpp/Keywords.h\
	../src/phreeqcpp/KineticsComp.cxx\
	../src/phreeqcpp/KineticsComp.h\
	../src/phreeqcpp/NameDouble.cxx\
	../src/phreeqcpp/NameDouble.h\
	../src/phreeqcpp/NumKeyword.cxx\
	../src/phreeqcpp/NumKeyword.h\
	../src/phreeqcpp/Parser.cxx\
	../src/phreeqcpp/Parser.h\
	../src/phreeqcpp/PBasic.cpp\
	../src/phreeqcpp/PBasic.h\
	../src/phreeqcpp/Phreeqc.cpp\
	../src/phreeqcpp/Phreeqc.h\
	../src/phreeqcpp/PHRQ_base.cxx\
	../src/phreeqcpp/PHRQ_base.h\
	../src/phreeqcpp/PHRQ_export.h\
	../src/phreeqcpp/PHRQ_io.cpp\
	../src/phreeqcpp/PHRQ_io.h\
	../src/phreeqcpp/Phreeqc_class.h\
	../src/phreeqcpp/PPassemblage.cxx\
	../src/phreeqcpp/PPassemblage.h\
	../src/phreeqcpp/PPassemblageComp.cxx\
	../src/phreeqcpp/PPassemblageComp.h\
	../src/phreeqcpp/Pressure.cxx\
	../src/phreeqcpp/Pressure.h\
	../src/phreeqcpp/Reaction.cxx\
	../src/phreeqcpp/Reaction.h\
	../src/phreeqcpp/ReadClass.cxx\
	../src/phreeqcpp/runner.cpp\
	../src/phreeqcpp/runner.h\
	../src/phreeqcpp/Solution.cxx\
	../src/phreeqcpp/Solution.h\
	../src/phreeqcpp/SolutionIsotope.cxx\
	../src/phreeqcpp/SolutionIsotope.h\
	../src/phreeqcpp/SSassemblage.cxx\
	../src/phreeqcpp/SSassemblage.h\
	../src/phreeqcpp/SScomp.cxx\
	../src/phreeqcpp/SScomp.h\
	../src/phreeqcpp/SS.cxx\
	../src/phreeqcpp/SS.h\
	../src/phreeqcpp/StorageBin.cxx\
	../src/phreeqcpp/StorageBin.h\
	../src/phreeqcpp/StorageBinList.cpp\
	../src/phreeqcpp/StorageBinList.h\
	../src/phreeqcpp/Surface.cxx\
	../src/phreeqcpp/Surface.h\
	../src/phreeqcpp/SurfaceCharge.cxx\
	../src/phreeqcpp/SurfaceCharge.h\
	../src/phreeqcpp/SurfaceComp.cxx\
	../src/phreeqcpp/SurfaceComp.h\
	../src/phreeqcpp/System.cxx\
	../src/phreeqcpp/System.h\
	../src/phreeqcpp/Temperature.cxx\
	../src/phreeqcpp/Temperature.h\
	../src/phreeqcpp/Use.cpp\
	../src/phreeqcpp/Use.h\
	../src/phreeqcpp/Utils.cxx\
	../src/phreeqcpp/Utils.h\
	../src/phreeqcpp/phreeqc/advection.cpp\
	../src/phreeqcpp/phreeqc/basicsubs.cpp\
	../src/phreeqcpp/phreeqc/cl1.cpp\
	../src/phreeqcpp/phreeqc/cvdense.cpp\
	../src/phreeqcpp/phreeqc/cvdense.h\
	../src/phreeqcpp/phreeqc/cvode.cpp\
	../src/phreeqcpp/phreeqc/cvode.h\
	../src/phreeqcpp/phreeqc/dense.cpp\
	../src/phreeqcpp/phreeqc/dense.h\
	../src/phreeqcpp/phreeqc/dw.cpp\
	../src/phreeqcpp/phreeqc/gases.cpp\
	../src/phreeqcpp/phreeqc/global_structures.h\
	../src/phreeqcpp/phreeqc/input.cpp\
	../src/phreeqcpp/phreeqc/input.h\
	../src/phreeqcpp/phreeqc/integrate.cpp\
	../src/phreeqcpp/phreeqc/inverse.cpp\
	../src/phreeqcpp/phreeqc/isotopes.cpp\
	../src/phreeqcpp/phreeqc/kinetics.cpp\
	../src/phreeqcpp/phreeqc/kinetics.h\
	../src/phreeqcpp/phreeqc/mainsubs.cpp\
	../src/phreeqcpp/phreeqc/model.cpp\
	../src/phreeqcpp/phreeqc/NA.h\
	../src/phreeqcpp/phreeqc/nvector.cpp\
	../src/phreeqcpp/phreeqc/nvector.h\
	../src/phreeqcpp/phreeqc/nvector_serial.cpp\
	../src/phreeqcpp/phreeqc/nvector_serial.h\
	../src/phreeqcpp/phreeqc/p2c.h\
	../src/phreeqcpp/phreeqc/parse.cpp\
	../src/phreeqcpp/phreeqc/phqalloc.cpp\
	../src/phreeqcpp/phreeqc/phqalloc.h\
	../src/phreeqcpp/phreeqc/PHRQ_io_output.cpp\
	../src/phreeqcpp/phreeqc/phrqtype.h\
	../src/phreeqcpp/phreeqc/pitzer.cpp\
	../src/phreeqcpp/phreeqc/pitzer_structures.cpp\
	../src/phreeqcpp/phreeqc/prep.cpp\
	../src/phreeqcpp/phreeqc/print.cpp\
	../src/phreeqcpp/phreeqc/read.cpp\
	../src/phreeqcpp/phreeqc/readtr.cpp\
	../src/phreeqcpp/phreeqc/sit.cpp\
	../src/phreeqcpp/phreeqc/smalldense.cpp\
	../src/phreeqcpp/phreeqc/smalldense.h\
	../src/phreeqcpp/phreeqc/spread.cpp\
	../src/phreeqcpp/phreeqc/step.cpp\
	../src/phreeqcpp/phreeqc/structures.cpp\
	../src/phreeqcpp/phreeqc/sundialsmath.cpp\
	../src/phreeqcpp/phreeqc/sundialsmath.h\
	../src/phreeqcpp/phreeqc/sundialstypes.h\
	../src/phreeqcpp/phreeqc/tally.cpp\
	../src/phreeqcpp/phreeqc/tidy.cpp\
	../src/phreeqcpp/phreeqc/transport.cpp\
	../src/phreeqcpp/phreeqc/utilities.cpp

unit_LDADD = /z/parkplace/home/charlton/lib/libcppunit.la
unit_LDADD += -ldl

COMPILE = $(CXXCOMPILE)
