# Docs
#
docdir = $(datadir)/doc/$(PACKAGE_TARNAME)-$(VERSION)/html

dist_doc_DATA = $(DOCS)

DOCS= \
	NOTICE \
	RELEASE \
	phreeqc3.chm \
	html/annotated.html \
	html/classes.html \
	html/classIPhreeqc.html \
	html/classIPhreeqcStop.html \
	html/doxygen.css \
	html/doxygen.png \
	html/files.html \
	html/functions.html \
	html/functions_func.html \
	html/functions_vars.html \
	html/globals.html \
	html/globals_enum.html \
	html/globals_eval.html \
	html/globals_func.html \
	html/index.html \
	html/IPhreeqc_8h.html \
	html/IPhreeqc_8h_source.html \
	html/IPhreeqc_8hpp.html \
	html/IPhreeqc_8hpp_source.html \
	html/structVAR.html \
	html/tab_b.gif \
	html/tab_l.gif \
	html/tab_r.gif \
	html/tabs.css \
	html/Var_8h.html \
	html/Var_8h_source.html
